syntax = "proto3";  
  
package protos;  
  
import "google/api/annotations.proto";  
  
service Greeter {  
  rpc SayHello (HelloRequest) returns (HelloReply) {  
      option (google.api.http) = {  
                post: "/hello_world"  
                body: "*"  
            };  
  }  
}  
   
message HelloRequest {  
  string name = 1;  
}  
   
message HelloReply {  
  string message = 1;  
}  